test/compile_errors/err_if_expr_missing_else_chain.w
//! expect-check-fail: if expression requires an else branch unless the then branch diverges

fn main:
    let _x =
        if false:
            1
        else if true:
            2
